--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="mouth"></div>
     </div>
   </div>
-  <div class="text">server down</div>
+  <div class="text">Site under maintenance</div>
   </div>
 </body>
 </html>
